--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "firebase": "^9.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-activity": "^2.1.1",
     "react-bootstrap": "^2.0.1",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-flexbox-grid": "^2.1.2",
     "react-moment": "^1.1.1",
@@ -42,7 +45,7 @@
     "@types/three": "^0.133.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
